adding Producers View

--- a/eTickets/Views/Actors/Index.cshtml
+++ b/eTickets/Views/Actors/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="col-md-8 offset-md-2">
         <table class="table">
             <thead>
-                <tr>
+                <tr class=" text-center">
                     <th scope="col">@Html.DisplayNameFor(model => model.ProfilePictureURL) </th>
                     <th scope="col">@Html.DisplayNameFor(model => model.FullName)</th>
                     <th scope="col">@Html.DisplayNameFor(model => model.Bio)</th>
