--- a/eTickets/Views/Movies/Index.cshtml
+++ b/eTickets/Views/Movies/Index.cshtml
@@ -50,7 +50,9 @@
                     <div class="col-md-12">
                         <div class="card-footer">
                             <p class="card-text">
-                                <a class="btn btn-outline-primary float-right"><i class="bi-pencil-square bi-eye-fill"></i> Show details </a>
+                                <a class="btn btn-outline-primary float-right" asp-action="Details" asp-route-id="@item.Id">
+                                <i class="bi-pencil-square bi-eye-fill"></i> Show details
+                                </a>
                                 <a class="btn btn-success text-white"><i class="bi-cart-plus"></i> Add to Cart (Price @item.Price.ToString("c"))</a>
                                 </p>
                             </div>
